command (atexit,chdir,script), config (os.home, os), removed useless dependency

--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,7 @@
 ###########
 # project #
 ###########
-project('hestia', 'c', version: '0.0.2')
+project('hestia', 'c', version: '0.0.3')
 cc = meson.get_compiler('c')
 localPath = meson.current_source_dir()
 
@@ -10,7 +10,7 @@ type = 'executable'
 version = {
   'mmr': meson.project_version().split('.'),
   'str': meson.project_version(),
-  'dsc': 'remove target option, hide overlay inside sandbox'
+  'dsc': 'command (atexit,chdir,script), config (os.home, os), removed useless dependency'
 }
 
 if get_option('eveloper')
